--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="description">
               <h3>Soy Rodrigo</h3>
               <h4>Soy <span> UX / UI Designer</span> que reside en <span>Argentina</span> </h4>
-              <p> Mi pasión es diseñar y desarrollar servicios para clientes que se especializan en la creación de sitios web, servicios web y tiendas en línea elegantes y modernos. Mi objetivo es diseñar experiencias de usuario digitales a través de interacciones significativas.
+              <p> Mi pasión es diseñar y desarrollar servicios para clientes que se especializan en la creación de sitios web, servicios web y apps en línea elegantes y modernos. Mi objetivo es diseñar experiencias de usuario digitales a través de interacciones significativas.
               </p>
             </div>
           </div>
