--- a/proy-1.html
+++ b/proy-1.html
@@ -32,9 +32,9 @@
         <div class="navegation">
           <div class="nav-items">
             <div class="nav-close-btn"></div>
-            <a href="index.html #home">Home</a>
-            <a href="index.html #about">About me</a>
-            <a class="active" href="index.html #portfolio">Portfolio</a>
+            <a href="index.html">Home</a>
+            <a href="index.html">About me</a>
+            <a class="active" href="index.html">Portfolio</a>
             <a href="contact.html">Contact</a>
           </div>
         </div>
@@ -389,7 +389,7 @@
         <div class="about group">
           <h3>Rodrigo</h3>
           <p>UX/UI Designer</p>
-          <a href="#about">Sobre Mi</a>
+          <a href="index.html">Sobre Mi</a>
         </div>
         <div class="hr"></div>
         <div class="info group">
