--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
         <div class="navegation">
           <div class="nav-items">
             <div class="nav-close-btn"></div>
-            <a href="index.html #home">Home</a>
-            <a href="index.html #about">About me</a>
-            <a href="index.html #portfolio">Portfolio</a>
+            <a href="index.html">Home</a>
+            <a href="index.html">About me</a>
+            <a href="index.html">Portfolio</a>
             <a class="active" href="contact.html">Contact</a>
           </div>
         </div>
@@ -110,8 +110,8 @@
         <div class="info group">
           <h3>Más </h3>
           <ul>
-            <li><a href="#portfolio">Portafolio</a></li>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="index.html">Portafolio</a></li>
+            <li><a href="contact.html">Contacto</a></li>
           </ul>
         </div>
         <div class="hr"></div>
