--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             <div class="portfolio-model flex-center">
               <div class="portfolio-model-body">
                 <i class="bi bi-x-lg portfolio-close-btn"></i>
-                <h3>Helty</h3>
+                <h3>Healty</h3>
                 <img src="./images/proy1/title.png" alt="">
-                <p>Helty es una app especialmente diseñada para que puedas manejar tu informacion clinica de la manera mas sencilla. Desde tu celular no solo podras ver resultados de tus estudios medicos, sino que tambien podras contactar a profesionales de la salud para tus consultas y/o programar tu proxima cita medica. <br>Todo esto sin perder un minuto de tu tiempo en largas filas de espera. 
+                <p>Healty es una app especialmente diseñada para que puedas manejar tu informacion clinica de la manera mas sencilla. Desde tu celular no solo podras ver resultados de tus estudios medicos, sino que tambien podras contactar a profesionales de la salud para tus consultas y/o programar tu proxima cita medica. <br>Todo esto sin perder un minuto de tu tiempo en largas filas de espera. 
                 </p>
                 <a href="proy-1.html" class="btn"> Ver mas</a>
               </div>
