--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="img-card">
               <div class="overlay"></div>
               <div class="info">
-                <h3>Helty</h3>
+                <h3>Healty</h3>
                 <span>UX / UI Design</span>
               </div>
               <img src="./images/proy1/title.png" alt="">
